--- a/skillets/03_add_service_group.skillet.yaml
+++ b/skillets/03_add_service_group.skillet.yaml
@@ -18,7 +18,7 @@ variables:
     description: Service Group Entry
     type_hint: text
 snippets:
-  - name: snippet_1
+  - name: add_service_group
     xpath: /config/devices/entry[@name="localhost.localdomain"]/device-group/entry[@name="{{ device_group }}"]
     element: |-
       <service-group>
